- Fixed scrollbar displaying on date pickers.

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -175,6 +175,11 @@ a.warning {
   max-height: 85vh;
   overflow-y: auto;
 
+  &.datepicker-dropdown {
+    max-height: none;
+    overflow-y: hidden;
+  }
+
   // Added to Support Right Aligned Dropdowns
   .dropdown-right & {
     right: 0;
